<resources>
    <string name="app_name">CSICON Explorer</string>
    <string name="about_csicon_title">About CSICON</string>
    <string name="about_csicon_subtitle">Who we are. What we do. Where we came from.</string>
    <string name="show_listing_title">Show Guide</string>
    <string name="show_listing_subtitle">All of the podcasts the network has to offer.</string>
    <string name="show01_title">Coffee With Jeff</string>
    <string name="show01_subtitle">Hosted by Jeff Kelley</string>
    <string name="show02_title">Gamepunting</string>
    <string name="show02_subtitle">Hosted by Eric Eslinger and Phil Bowen</string>
    <string name="show03_title">Geekdays</string>
    <string name="show03_subtitle">Hosted by Breki Tomasson</string>
    <string name="show03_description">Geekdays is our daily news and information show, bringing you the latest things from the world of geek culture, every single Geekday!</string>
    <string name="show03_episode01_title">Geekdays #533: 2016/12/22</string>
    <string name="show03_episode01_date">December 22, 2016</string>
    <string name="show03_episode01_description">Automated truck convoys, commercialized space flight, and sex. Yep, it\'s Geekdays.</string>
    <string name="show03_episode02_title">Geekdays #532: 2016/12/21</string>
    <string name="show03_episode02_date">December 21, 2016</string>
    <string name="show03_episode02_description">People are jerks online, women can change their brains, and convenience stores get into the drones game. We\'ve got some good stuff for you today on Geekdays.</string>
    <string name="show03_episode03_title">Geekdays #531: 2016/12/20</string>
    <string name="show03_episode03_date">December 20, 2016</string>
    <string name="show03_episode03_description">Killer Robots, PCs without Porn, and Death Stars. It\'s good to be a Geekdays.</string>
    <string name="play_button">Play</string>
    <string name="stop_button">Stop</string>
    <string name="about_csicon">CSICON is an independent podcasting network, home to shows like Geekdays, Movieing On, The History Files, Gamepunting, The MMOsketeers and many more, with regular hosts such as Breki Tomasson, Petter Mårtensson, Josh Wodarz and Jeff Kelley.\n\nThe network was founded by Petter and Breki 2011 as a place to gather, produce and distribute the podcasts that they were already creating and which they were planning to create in the future. What started off as one podcast quickly became three, which shortly thereafter was a dozen – and is still growing. Today, the network is getting many tens of thousands of unique listeners every month, and is still rapidly growing both their audience and their stable of shows while also broadening their media exposure into video and text-based content as well.</string>
</resources>
