<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.tomgehrke.csiconexplorer.EpisodeListingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            style="@style/episodeListHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                style="@style/albumArt"
                android:src="@drawable/show03_logo" />

            <LinearLayout
                style="@style/summaryShow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/summaryShowTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/show03_title" />

                <TextView
                    style="@style/summaryShowSubtitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/show03_subtitle" />

                <TextView
                    style="@style/summaryShowDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/show03_description" />
            </LinearLayout>

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    style="@style/episodeListCard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/episodeListTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/show03_episode01_title" />

                    <TextView
                        style="@style/episodeListDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/show03_episode01_date" />

                    <TextView
                        style="@style/episodeListDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/show03_episode01_description" />

                </LinearLayout>

                <LinearLayout
                    style="@style/episodeListCard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/episodeListTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/show03_episode02_title" />

                    <TextView
                        style="@style/episodeListDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/show03_episode02_date" />

                    <TextView
                        style="@style/episodeListDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/show03_episode02_description" />

                </LinearLayout>

                <LinearLayout
                    style="@style/episodeListCard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/episodeListTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/show03_episode03_title" />

                    <TextView
                        style="@style/episodeListDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/show03_episode03_date" />

                    <TextView
                        style="@style/episodeListDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/show03_episode03_description" />

                </LinearLayout>

                <ImageView style="@style/appMonogram" />

            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</LinearLayout>
