<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tomgehrke.csiconexplorer.ShowGuideActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/show01_tile"
            style="@style/activityCard">

            <ImageView
                style="@style/activityCardThumbnail"
                android:src="@drawable/show01_logo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/show01TitleTextView"
                    style="@style/activityCardTitle"
                    android:text="@string/show01_title" />

                <TextView
                    android:id="@+id/show01SubtitleTextView"
                    style="@style/activityCardSubtitle"
                    android:text="@string/show01_subtitle" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/show02_tile"
            style="@style/activityCard">

            <ImageView
                style="@style/activityCardThumbnail"
                android:src="@drawable/show02_logo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/show02TitleTextView"
                    style="@style/activityCardTitle"
                    android:text="@string/show02_title" />

                <TextView
                    android:id="@+id/show02SubtitleTextView"
                    style="@style/activityCardSubtitle"
                    android:text="@string/show02_subtitle" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/show03_activity_card"
            style="@style/activityCard">

            <ImageView
                style="@style/activityCardThumbnail"
                android:src="@drawable/show03_logo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/show03TitleTextView"
                    style="@style/activityCardTitle"
                    android:text="@string/show03_title" />

                <TextView
                    android:id="@+id/show03SubtitleTextView"
                    style="@style/activityCardSubtitle"
                    android:text="@string/show03_subtitle" />

            </LinearLayout>

        </LinearLayout>

        <ImageView style="@style/appMonogram"/>
    </LinearLayout>

</ScrollView>