<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_episode"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.tomgehrke.csiconexplorer.EpisodeActivity">

    <!--
    <TextView
        android:text="Information about an episode with the option to play it"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    -->

    <LinearLayout
        style="@style/episodeListHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            style="@style/albumArt"
            android:src="@drawable/show03_logo"
            tools:ignore="ContentDescription" />

        <LinearLayout
            style="@style/summaryEpisode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/summaryEpisodeTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/show03_episode01_title" />

            <TextView
                style="@style/summaryEpisodeSubtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/show03_episode01_date" />

            <TextView
                style="@style/summaryEpisodeDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/show03_episode01_description" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/playToggleButton"
        style="@style/playToggle"
        android:text="@string/play_button" />

</LinearLayout>
